--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -11,6 +11,8 @@
         android:id="@+id/rl_buy_top"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/pb_buy_loading"
         android:background="@color/main_color">
 
         <ImageView
@@ -21,23 +23,30 @@
 
         <TextView
             android:id="@+id/tv_buy_title"
-            android:layout_width="300dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center"
             android:lines="1"
             android:textColor="@color/main_write"
-            android:textSize="@dimen/text_mid">
+            android:textSize="@dimen/text_mid"></TextView>
 
-        </TextView>
+        <ImageView
+            android:id="@+id/iv_buy_share_shop"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@+id/iv_buy_share_app"
+            android:padding="8dp"
+            android:src="@mipmap/share_shop" />
 
         <ImageView
             android:id="@+id/iv_buy_share_app"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/margin_5"
+            android:padding="8dp"
             android:src="@mipmap/share_app" />
     </RelativeLayout>
 
@@ -46,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="5dp"
         android:layout_below="@+id/rl_buy_top"
-        android:background="#61fa08"
+        android:background="@color/main_gray"
         android:visibility="gone" />
 
     <WebView
@@ -56,5 +65,6 @@
         android:layout_below="@+id/pb_buy_loading">
 
     </WebView>
+
 
 </RelativeLayout>
