--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="toolbarStyle">@style/MyToolbar</item>
     </style>
 
     <style name="MySelfDialog" parent="android:style/Theme.Dialog">
@@ -14,6 +15,14 @@
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="MyToolbar"
+
+        parent="Widget.AppCompat.Toolbar">
+
+        <item name="contentInsetStart">0dp</item>
+
     </style>
 
     <style name="PhotoPickerTheme" parent="Theme.AppCompat.Light.DarkActionBar">
