--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,22 +32,13 @@
             android:textSize="@dimen/text_mid"></TextView>
 
         <ImageView
-            android:id="@+id/iv_buy_share_shop"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginRight="8dp"
-            android:layout_toLeftOf="@+id/iv_buy_share_app"
-            android:padding="8dp"
-            android:src="@mipmap/share_shop" />
-
-        <ImageView
             android:id="@+id/iv_buy_share_app"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="@dimen/margin_5"
             android:padding="8dp"
-            android:src="@mipmap/share_app" />
+            android:src="@mipmap/three_dian" />
     </RelativeLayout>
 
     <ProgressBar
@@ -62,9 +53,9 @@
         android:id="@+id/wv_buy_show"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/pb_buy_loading">
+        android:layout_below="@+id/rl_buy_top">
 
     </WebView>
 
 
-</RelativeLayout>
+</LinearLayout>
